--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<p>Hello 大家好</p>
-<p>我是juruohjr，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
-
-<ul>
-</ul>
+<html>
+	<head>
+		<title>Home</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="index.js"></script>
+	</head>
+	<body>
+		<h1>Home</h1>
+		<p>This is the home page</p>
+</html>
