--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>Home</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="mgr.js"></script>
 		<script src="index.js"></script>
 	</head>
 	<body>
