--- a/labels.html
+++ b/labels.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="mgr.js"></script>
-		<script src="index.js"></script>
+		<script src="labels.js"></script>
 	</head>
 	<body>
 		<div class="topbar">
@@ -16,9 +16,9 @@
 			<a class="topbar-element" href="labels.html">Labels</a>
 		</div>
 		<div style="height: 40px"></div>
-		<p>This is the home page</p>
+		<p>This is the label page</p>
 		This website is still on test stage.
-		<div id="articleList">
+		<div id="labelList">
 
 		</div>
 		<div style="text-align: center;">
