--- a/labels.html
+++ b/labels.html
@@ -22,8 +22,8 @@
 
 		</div>
 		<div style="text-align: center;">
-			<button id="Btn_lastPage">Last</button>
-			<button id="Btn_nextPage">Next</button>
+			<button id="Btn_lastPage" onclick="prevPage()">Last</button>
+			<button id="Btn_nextPage" onclick="nextPage()">Next</button>
 		</div>
 		
 </html>
