--- a/labels.html
+++ b/labels.html
@@ -10,7 +10,7 @@
 		<script src="mgr.js"></script>
 		<script src="labels.js"></script>
 	</head>
-	<body>
+	<body style="background-color: #ccc">
 		<div class="topbar">
 			<a class="topbar-element" href="index.html">Home</a>
 			<a class="topbar-element" href="labels.html">Labels</a>
