--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div style="height: 40px"></div>
 		<p>This is the home page</p>
 		This website is still on test stage.
-		<div id="articleList">
+		<div id="articleList" class="main-list">
 
 		</div>
 		<div style="text-align: center;">
