--- a/labels.html
+++ b/labels.html
@@ -18,7 +18,7 @@
 		<div style="height: 40px"></div>
 		<p>This is the label page</p>
 		This website is still on test stage.
-		<div id="labelList">
+		<div id="labelList" class="main-list">
 
 		</div>
 		<div style="text-align: center;">
