--- a/article.html
+++ b/article.html
@@ -16,9 +16,8 @@
 			<a class="topbar-element" href="labels.html">Labels</a>
 		</div>
 		<div style="height: 40px"></div>
-		<p>This is the home page</p>
-		This website is still on test stage.
-		<div id="articleList" class="main-list">
+		<div class="article-list-element-title" id="title" style="margin-top: 50px"></div>
+		<div id="content">
 
 		</div>
 		
