--- a/article.html
+++ b/article.html
@@ -17,7 +17,7 @@
 		</div>
 		<div style="height: 40px"></div>
 		<div class="article-list-element-title" id="title" style="margin-top: 50px"></div>
-		<div id="content">
+		<div id="content" class="content">
 
 		</div>
 		
