--- a/article.html
+++ b/article.html
@@ -10,7 +10,7 @@
 		<script src="mgr.js"></script>
 		<script src="article.js"></script>
 	</head>
-	<body style="background-color: #ccc">
+	<body style="background-color: #ccc; max-width: auto">
 		<div class="topbar">
 			<a class="topbar-element" href="index.html">Home</a>
 			<a class="topbar-element" href="labels.html">Labels</a>
