--- a/labels.html
+++ b/labels.html
@@ -1,10 +1,7 @@
 <html>
 	<head>
 		<title>Home</title>
-		<link
-			rel="stylesheet"
-			href="https://unpkg.com/98.css"
-		>
+		<script src="https://unpkg.com/sober/dist/sober.min.js"></script>
 		<link rel="stylesheet" href="style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="mgr.js"></script>
