--- a/article.html
+++ b/article.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Home</title>
 		<script src="https://unpkg.com/sober/dist/sober.min.js"></script>
-		<!-- <link rel="stylesheet" href="style.css"> -->
+		<link rel="stylesheet" href="style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="mgr.js"></script>
 		<script src="article.js"></script>
